feat:日课表添加快捷工具栏 fix:智慧学工文字错误

--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -593,7 +593,7 @@
                                         android:layout_below="@+id/more_url_staff_picture"
                                         android:layout_centerInParent="true"
                                         android:layout_weight="1"
-                                        android:text="考试安排"
+                                        android:text="智慧学工"
                                         android:textSize="13dp" />
 
                                 </RelativeLayout>
