--- a/app/src/main/res/layout/fragment_day_class.xml
+++ b/app/src/main/res/layout/fragment_day_class.xml
@@ -9,12 +9,13 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:background="@color/colorPrimary">
 
         <TextView
+            android:id="@+id/day_text"
             android:layout_width="wrap_content"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:text="日课表"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
@@ -25,14 +26,13 @@
         <TextView
             android:id="@+id/day_class_hint"
             android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:textSize="16dp"
+            android:textColor="@color/app_white"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="100dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginLeft="97dp"
+            app:layout_constraintStart_toStartOf="@id/day_text"
+            app:layout_constraintTop_toTopOf="@id/day_text" />
 
     </RelativeLayout>
 
