--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -5,10 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".LaunchActivity">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/table"/>
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/table"/>
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/app_name"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
