--- a/app/src/main/res/layout/detail_cardview.xml
+++ b/app/src/main/res/layout/detail_cardview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -16,65 +15,52 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
             android:orientation="vertical">
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="20dp" />
 
             <TextView
                 android:id="@+id/detail_text_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:layout_marginBottom="6dp"
+                android:textSize="18dp"
+                android:layout_marginBottom="3dp"
                 android:textColor="#000000"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginTop="3dp"/>
 
             <TextView
                 android:id="@+id/detail_text_2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/detail_text_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginTop="3dp" />
 
             <TextView
                 android:id="@+id/detail_text_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginTop="3dp" />
 
             <TextView
                 android:id="@+id/detail_text_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginTop="3dp" />
 
             <TextView
                 android:id="@+id/detail_text_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginTop="3dp" />
 
             <TextView
                 android:id="@+id/detail_text_7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:layout_marginLeft="5dp"
                 android:layout_marginBottom="5dp"/>
 
         </LinearLayout>
