--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -71,7 +71,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/xueshengzheng" />
+                    android:src="@drawable/p_huiyuan" />
 
                 <LinearLayout
                     android:id="@+id/person_userNameAndNo"
