--- a/app/src/main/res/layout/planned_course_cardview.xml
+++ b/app/src/main/res/layout/planned_course_cardview.xml
@@ -10,22 +10,22 @@
         android:background="@color/colorPrimary" />
 
     <TextView
-        android:id="@+id/header_term"
+        android:id="@+id/planned_course_header_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="18dp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#673AB7"
         android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         android:background="@color/app_white"
+        android:background="@color/app_white"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/ScoreName"
+            android:id="@+id/planned_course_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -33,7 +33,7 @@
             android:textSize="16dp" />
 
         <TextView
-            android:id="@+id/ScoreCheck"
+            android:id="@+id/planned_course_credits"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
@@ -41,28 +41,13 @@
             android:textSize="16dp" />
 
         <TextView
-            android:id="@+id/ScoreExperiment"
+            android:id="@+id/planned_course_degree"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
             android:gravity="center"
             android:textSize="16dp" />
 
-        <TextView
-            android:id="@+id/ScoreUsually"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:gravity="center"
-            android:textSize="16dp" />
-
-        <TextView
-            android:id="@+id/ScoreFinal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:gravity="center"
-            android:textSize="16dp" />
 
     </LinearLayout>
 
